# GradTracer

./: README.md  pyproject.toml  test_tree.py
.github/workflows/: publish.yml
cookbook/: Master_Tutorial.ipynb  README.md  full_cycle_demo.py
docs/: ARCHITECTURE.md  BENCHMARKS.md
examples/: README.md  benchmark.py  benchmark_models.py  benchmark_suite.py  cookbook_01_compression_hf.ipynb  cookbook_02_feature_engineering.ipynb  cookbook_03_recsys_and_gnn.ipynb  cookbook_04_visualizations.ipynb  flowgrad_demo.ipynb  gradtracer_demo.ipynb  recsys_validation.ipynb  validate_autofix.py  validate_compression.py  validate_interpretation.py  validate_joint_compression.py  validate_quantization.py  validate_recsys_real.py  validate_trees.py  validate_trees_fe.py  verify_compression.py  verify_performance_boost.py
flowgrad/: __init__.py  agent.py  diagnostics.py  tracker.py
flowgrad/analyzers/: boosting.py  compression.py  distillation.py  embedding.py  features.py  peft.py  quantization.py  saliency.py  sklearn_tracker.py  tree_dynamics.py
gradtracer/: __init__.py  agent.py  audit.py  diagnostics.py  memory.py  snapshot.py  tracker.py  wandb.py
gradtracer/analyzers/: __init__.py  compression.py  embedding.py  features.py  interpretation.py  manager.py  pruning.py  quantization.py  recipes.py  robustness.py  tree_dynamics.py  trees.py
gradtracer/viz/: plots.py
tests/: test_compression_rigorous.py  test_embedding.py  test_overhead.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
