[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradtracer"
version = "0.7.0"
description = "Flow-based Diagnostics for Embedding Systems & Compression"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "GradTracer Contributors"}
]
keywords = ["machine-learning", "deep-learning", "feature-engineering", "pytorch", "xgboost", "lightgbm", "catboost", "scikit-learn", "recsys", "model-diagnostics", "training-dynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
torch = ["torch>=1.9"]
xgboost = ["xgboost>=1.3"]
lightgbm = ["lightgbm>=3.0"]
catboost = ["catboost>=1.0"]
boosting = ["xgboost>=1.3", "lightgbm>=3.0", "catboost>=1.0"]
sklearn = ["scikit-learn>=1.0"]
plotly = ["plotly>=5.0"]
all = ["torch>=1.9", "xgboost>=1.3", "lightgbm>=3.0", "catboost>=1.0", "scikit-learn>=1.0", "plotly>=5.0"]
dev = ["pytest>=7.0", "torch>=1.9", "xgboost>=1.3", "lightgbm>=3.0", "catboost>=1.0", "scikit-learn>=1.0", "plotly>=5.0"]

[tool.setuptools.packages.find]
include = ["gradtracer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
